# kiwi

csharp/: CMakeLists.txt  README.md  build-android.sh  kiwi.i  kiwi.net.droid.csproj.template  kiwi.net.droid.nuspec
kiwi/: kiwi.h  solver.h  solverimpl.h
